<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pillow</string>
    <string name="buy">Buy a view</string>
    <string name="share">Share to Weixin</string>
    <string name="share_app">Share app to Weixin</string>
    <string name="open">Open Weixin</string>
    <string name="confirm">Confirm</string>
    <string name="create_msg_for_weixin">Create Message for WeiXin</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Wanna to share something to SNS</string>
    <string name="show_from_wx_tip">This screen is used to show some app data which requested by WeiXin</string>

</resources>